# fabro

./: .env.example  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  arc.toml  daytona_build.py  fabro.toml  install.sh  package.json  plan.md  spec-dod-multimodel.dot
.claude/skills/changelog/: watermark
.claude/skills/docs/: watermark
.github/workflows/: release.yml  rust.yml  typescript.yml
apps/arc-web/: tsconfig.json
apps/arc-web/app/: app.css  routes.ts
apps/fabro-web/: package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/fabro-web/app/: api-client.test.ts  api-client.ts  app.css  root.tsx
apps/marketing/: astro.config.mjs  vercel.json
arc/workflows/imagegen/: Dockerfile.imagegen  workflow.toml
arc/workflows/imagegen-openai/: workflow.dot
arc/workflows/vnc-demo/: Dockerfile.vnc  browse-prompt.md  workflow.dot  workflow.toml
attractor-web/src/: EventLog.tsx  api.ts
crates/agent/: Cargo.toml
crates/agent/src/: cli.rs  error.rs  history.rs  lib.rs  loop_detection.rs  provider_profile.rs  session.rs  skills.rs  subagent.rs  test_support.rs  tool_registry.rs  tools.rs  types.rs
crates/agent/tests/: parity_matrix.rs
crates/arc-agent/: Cargo.toml
crates/arc-agent/src/: cli.rs  compaction.rs  config.rs  docker_sandbox.rs  history.rs  lib.rs  local_sandbox.rs  mcp_integration.rs  sandbox.rs  session.rs  skills.rs  test_support.rs  tool_execution.rs  tool_registry.rs  tools.rs  truncation.rs  v4a_patch.rs
crates/arc-agent/tests/: guardrails.rs  parity_matrix.rs
crates/arc-api/: Cargo.toml
crates/arc-api/src/: app_config.rs  jwt_auth.rs  lib.rs  serve.rs  server.rs  server_config.rs  sessions.rs  tls.rs
crates/arc-api/tests/: integration.rs  openapi_conformance.rs
crates/arc-cli/: Cargo.toml
crates/arc-cli/src/: cli_config.rs  doctor.rs  main.rs
crates/arc-cli/tests/: cli.rs
crates/arc-devcontainer/: Cargo.toml
crates/arc-devcontainer/src/: features.rs  lib.rs
crates/arc-exe/src/: lib.rs
crates/arc-llm/src/: catalog.json  catalog.rs  cli.rs  error.rs  generate.rs  types.rs
crates/arc-slack/src/: threads.rs
crates/arc-sprites/: Cargo.toml
crates/arc-sprites/src/: lib.rs
crates/arc-types/: build.rs
crates/arc-util/: Cargo.toml
crates/arc-util/src/: terminal.rs
crates/arc-workflows/: Cargo.toml  README.md
crates/arc-workflows/src/: artifact.rs  asset_snapshot.rs  condition.rs  daytona_sandbox.rs  engine.rs  event.rs  git.rs  git_credential_sandbox.rs  lib.rs  preamble.rs  retro.rs  retro_agent.rs  sandbox_record.rs  workflow.rs
crates/arc-workflows/tests/: daytona_integration.rs  integration.rs
crates/attractor/: Cargo.toml  README.md
crates/attractor/src/: artifact.rs  checkpoint.rs  condition.rs  daytona_env.rs  engine.rs  error.rs  event.rs  lib.rs  outcome.rs  pipeline.rs  preamble.rs  server.rs  stylesheet.rs  transform.rs
crates/attractor/src/cli/: backend.rs  mod.rs  run.rs  serve.rs
crates/attractor/src/graph/: types.rs
crates/attractor/src/handler/: codergen.rs  conditional.rs  exit.rs  fan_in.rs  manager_loop.rs  mod.rs  parallel.rs  script.rs  start.rs  tool.rs  wait_human.rs
crates/attractor/src/interviewer/: auto_approve.rs  callback.rs  console.rs  mod.rs  recording.rs
crates/attractor/src/parser/: ast.rs  grammar.rs  lexer.rs  mod.rs  semantic.rs
crates/attractor/src/validation/: rules.rs
crates/attractor/tests/: cli.rs  daytona_integration.rs  integration.rs
crates/coding-agent-loop/: Cargo.toml
crates/coding-agent-loop/src/: config.rs  error.rs  event.rs  execution_env.rs  history.rs  lib.rs  local_env.rs  loop_detection.rs  project_docs.rs  provider_profile.rs  session.rs  subagent.rs  tool_registry.rs  tools.rs  truncation.rs  types.rs
crates/coding-agent-loop/src/profiles/: anthropic.rs  gemini.rs  mod.rs  openai.rs
crates/llm/: Cargo.toml
crates/llm/src/: catalog.json  catalog.rs  client.rs  error.rs  generate.rs  lib.rs  middleware.rs  provider.rs  tools.rs  types.rs
crates/llm/tests/: integration.rs
crates/redact/src/: gitleaks.rs
crates/unified-llm/: Cargo.toml
crates/unified-llm/src/: client.rs  error.rs  generate.rs  lib.rs  retry.rs  tools.rs  types.rs
crates/unified-llm/tests/: integration.rs
demo/: 01-hello.dot  03-pipeline.dot  04-branch-loop.dot  05-parallel.dot  06-human-gate.dot  07-multi-model.dot  08-multi-model.dot
docker/: Dockerfile  docker-compose.yaml  entrypoint.ts
docs/: docs.json  dot-highlight.js
docs-internal/: events-strategy.md
docs-internal/demo/: 06-parallel.fabro  11-ensemble.fabro
docs/agent/reviews/: attractor-spec-full-review.md  spec-gap-analysis.md  spec-sections-5-6-review.md  spec-sections-7-9-review.md
docs/agents/: hooks.mdx  outputs.mdx
docs/api-reference/: arc-api.yaml  client-sdks.mdx
docs/changelog/: 2026-02-23.mdx  2026-02-24.mdx  2026-02-25.mdx  2026-02-27.mdx  2026-02-28.mdx  2026-03-01.mdx  2026-03-02.mdx  2026-03-03.mdx  2026-03-04.mdx  2026-03-05.mdx  2026-03-06.mdx  2026-03-07.mdx  2026-03-08.mdx  2026-03-09.mdx  2026-03-16.mdx  2026-03-17.mdx
docs/core-concepts/: how-fabro-works.mdx  models.mdx
docs/examples/: definition-of-done.mdx  nlspec-conformance.mdx  repl-handoff.mdx  solitaire.mdx
docs/execution/: checkpoints.mdx  context.mdx  devcontainers.mdx  environments.mdx  failures.mdx  observability.mdx  outcomes.mdx  retros.mdx  run-configuration.mdx
docs/getting-started/: introduction.mdx  overview.mdx  why-fabro.mdx
docs/human-tools/: preview.mdx
docs/integrations/: exe-dev.mdx
docs/naming/: changelog-guide.md
docs/reference/: cli.mdx  dot-language.mdx  sdk.mdx
docs/tutorials/: ensemble.mdx  parallel-review.mdx
docs/workflows/: stages-and-nodes.mdx  transitions.mdx
evals/swe-bench/: README.md  run_eval.py
lib/crates/fabro-beastie/: Cargo.toml
lib/crates/fabro-beastie/src/: dummy.rs  iokit_bindings.rs  lib.rs  linux.rs  macos.rs
pipelines/daytona-check/: check.dot  task.toml
test/: parallel.fabro
test/docs/: CHECKLIST.md  run_tests.sh
tmp/: implement-and-simplify.toml
(+271 files in other folders)
