[package]
name = "arc-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Unified CLI for the Arc AI framework"

[[bin]]
name = "arc"
path = "src/main.rs"

[dependencies]
arc-llm = { path = "../arc-llm" }
arc-agent = { path = "../arc-agent" }
arc-workflows = { path = "../arc-workflows" }
arc-api = { path = "../arc-api" }
arc-util = { path = "../arc-util" }
bollard.workspace = true
clap.workspace = true
daytona-sdk.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
chrono.workspace = true
dirs.workspace = true
reqwest.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serde_json.workspace = true
httpmock = "0.8"
