[package]
name = "arc-sprites"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Sprites (Fly.io) VM sandbox for Arc agent tool operations"

[lib]
doctest = false

[dependencies]
arc-agent = { path = "../arc-agent" }
async-trait.workspace = true
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
chrono.workspace = true
rand.workspace = true
tracing.workspace = true
base64.workspace = true
shlex = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
