[package]
name = "fabro-beastie"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Cross-platform idle sleep prevention (No Sleep Till Brooklyn)"

[lib]
doctest = false

[dependencies]
tracing.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
